--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 							<li><a href="elements.html">Thoughts</a></li>
 							<li><a href="elements.html">Annual</a></li>
 						</ul>
-						<ul class="actions">
+						<ul class="alt">
 							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 							<li><a href="#" class="icon brands fa-behance"><span class="label">Behance</span></a></li>
@@ -46,17 +46,46 @@
 								<h1>Hi, my name is Nada</h1>
 							</header>
 							<div class="content">
-								<p>Hello! I am Nada a designer, I am comfortable working on all aspects related to the design process, 
+								<p>I am comfortable working on all aspects related to the design process, 
 									including running ideo­graphic workshops and researching user needs, 
 									creating beautiful interfaces and producing production ready assets.</p>
-								<ul class="actions">
+								
+								<div >
+									<ul class="alt">
 										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 										<li><a href="#" class="icon brands fa-behance"><span class="label">Behance</span></a></li>
 										<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
 										<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 								</ul>
-							</div>
+									<ul class="circles">
+											<li></li>
+											<li></li>
+											<li></li>
+											<li></li>
+											<li></li>
+											<li></li>
+											<li></li>
+											<li></li>
+											<li></li>
+											<li></li>
+									</ul>
+							   </div >
+								<div  >
+									<ul class="circles2">
+											<li>HTML</li>
+											<li>JS</li>
+											<li>React</li>
+											<li>MySql</li>
+											<li>UX</li>
+											<li>Node.js</li>
+											<li>JSON</li>
+											<li>Java</li>
+											<li>API</li>
+											<li>Git</li>
+									</ul>
+							    </div >
+						    </div>
 						</div>
 					</section>
 
@@ -121,21 +150,7 @@
 								</article>
 							</section>
 
-						<!-- Two -->
-							<section id="two">
-								<div class="inner">
-									<header class="major">
-										<h2>Massa libero</h2>
-									</header>
-									<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet pharetra et feugiat tempus.</p>
-									<ul class="actions">
-										<li><a href="landing.html" class="button next">Get Started</a></li>
-									</ul>
-								</div>
-							</section>
-
-					</div>
-
+						
 				<!-- Contact -->
 					<section id="contact">
 						<div class="inner">
@@ -200,7 +215,7 @@
 								<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 							</ul>
 							<ul class="copyright">
-								<li>&copy; Nada</li><script>document.write(new Date().getFullYear())</script> Your Name All Rights Reserved.</li>
+								<li>&copy; Nada</li><script>document.write(new Date().getFullYear())</script> All Rights Reserved.</li>
 							</ul>
 						</div>
 					</footer>
