--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 									creating beautiful interfaces and producing production ready assets.</p>
 								
 								<div >
-									<ul class="alt">
+									<ul class="social">
 										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 										<li><a href="#" class="icon brands fa-behance"><span class="label">Behance</span></a></li>
